--- a/app/src/main/res/layout/activity_frag_healthy_canhan.xml
+++ b/app/src/main/res/layout/activity_frag_healthy_canhan.xml
@@ -65,14 +65,16 @@
             android:textColor="#000000"
             android:text="Lịch sử theo dõi sức khỏe"
             android:layout_marginTop="20dp"
-            android:textSize="25sp"
+            android:textSize="17sp"
             android:layout_marginLeft="10dp"
             />
 
+
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcv_líchutheodoisuckhoe"
+            android:id="@+id/rcv_lichsutheodoisuckhoe"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"/>
+            android:layout_height="280dp"
+            android:layout_margin="10dp"
+            android:layout_marginBottom="45dp"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
